[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["tygenie-plugins-ovh-pci/plugins"]

[tool.hatch.build.targets.wheel.sources]
"tygenie-plugins-ovh-pci/plugins" = "tygenie/plugins"

[project]
name = "tygenie-plugins-ovh-pci"
version = "0.1"
authors = [
  { name = "Pierre-Samuel Le Stang", email = "pierre-samuel.le-stang@corp.ovh.com" },
]
description = "OVHCloud tygenie PCI's team plugin"
readme = "README.md"
dependencies = ["tygenie>=1.7.1"]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://stash.ovh.net/projects/CLOUD/repos/tygenie/browse?at=refs%2Fheads%2Fpci"
